--- a/xai-manuscript.tex
+++ b/xai-manuscript.tex
@@ -16,23 +16,24 @@
     Explainable Neural Network Recognition of Handwritten Characters
 }
 
-\author{\IEEEauthorblockN{Author 1}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
-\and
-\IEEEauthorblockN{Author 2}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
-\and
-\IEEEauthorblockN{Author 3}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\author{\IEEEauthorblockN{Paul Whitten, Francis Wolff, Chris Papachristou}
+\IEEEauthorblockA{\textit{Electrical, Computer, and Systems Engineering} \\
+\textit{Case School of Engineering} \\
+\textit{Case Western Reserve University}\\
+Cleveland, OH, USA \\
+pcw@case.edu, fxw12@case,edu, cpa2.case.edu}
+%\and
+%\IEEEauthorblockN{Author 2}
+%\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
+%\textit{name of organization (of Aff.)}\\
+%City, Country \\
+%email address}
+%\and
+%\IEEEauthorblockN{Author 3}
+%\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
+%\textit{name of organization (of Aff.)}\\
+%City, Country \\
+%email address}
 }
 
 \maketitle
