--- a/references.bib
+++ b/references.bib
@@ -257,3 +257,13 @@ doi = {https://doi.org/10.1006/cgip.1994.1042},
 url = {https://www.sciencedirect.com/science/article/pii/S104996528471042X},
 author = {T.C. Lee and R.L. Kashyap and C.N. Chu},
 }
+
+@ARTICLE{506792,
+  author={Casey, R.G. and Lecolinet, E.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={A survey of methods and strategies in character segmentation}, 
+  year={1996},
+  volume={18},
+  number={7},
+  pages={690-706},
+  doi={10.1109/34.506792}}
