--- a/xai-manuscript.tex
+++ b/xai-manuscript.tex
@@ -21,7 +21,7 @@
 \textit{Case School of Engineering} \\
 \textit{Case Western Reserve University}\\
 Cleveland, OH, USA \\
-pcw@case.edu, fxw12@case,edu, cpa2.case.edu}
+pcw@case.edu, fxw12@case.edu, cap2.case.edu}
 %\and
 %\IEEEauthorblockN{Author 2}
 %\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
@@ -60,9 +60,9 @@ pcw@case.edu, fxw12@case,edu, cpa2.case.edu}
 \end{IEEEkeywords}
 
 \section{Introduction}
-Artificial Intelligence (AI), especially Machine Learning (ML) has been used
+Artificial Intelligence (AI), especially Machine Learning (ML), has been used
 widely in recent years.  Many aspects of human interaction with technology may
-involve AI e.g, digital assistants, online shopping, and autonomous vehicles.
+involve AI, e.g, digital assistants, online shopping, and autonomous vehicles.
 
 While modern ML systems have been very successful in many tasks, there has been
 a lack of an ability to explain decisions made by a ML system. ML systems
@@ -83,15 +83,15 @@ MNIST and EMNIST, there are problems with samples that are ambiguous or
 mislabeled.  These ambiguous and mislabeled samples are especially challenging
 for explainability.
 
-A property-based XAI methodology\cite{whitten21} that provides rationale for
-classification decisions was recently introduced.  In this methodology,
-explainable properties, transformations of data related to properties, and ML
-models trained against those property transformations are used to make local
-classification decisions.  The local, property-based, decisions then contribute
-to a global classification.  The properties that were used in the global
-classification contribute rationale for the decision.  This methodology achieved
-acceptable accuracy results using MNIST and was able to provide explanations
-related to properties of the samples.
+A property-based XAI methodology\cite{whitten21} provides rationale for
+classification decisions, referencing explainable properties.  In this
+methodology, explainable properties, transformations of data related to the
+explainable properties, and ML models trained against those transformations are
+used to make local classification decisions.  The local, property-based,
+decisions are then combined to make a global decision.  The properties used in
+the global decision contribute rationale for the decision.  This methodology
+achieved acceptable accuracy results with MNIST and was able to provide
+explanations related to explainable properties of the samples.
 
 This work constructs an XAI data pipeline from the concepts of the
 property-based XAI methodology and attempts to improve on past results by
@@ -107,15 +107,16 @@ Current Neural Networks (NN) and ML models do not explain or justify decisions
 in a manner suitable to present to a human user.  There is currently no
 algorithm that can take weights of NN and justify decisions to a human.
 
-This work seeks to improve on a Property-Based XAI methodology and construct an
+This work seeks to improve on a property-based XAI methodology and construct an
 explainable data pipeline. The aim is to increase recognition accuracy while
-providing a human understandable explanation for decision.
+providing a human understandable explanation for decisions.
 
-An expanded dataset of handwritten characters, EMNIST, is utilized. This work
-also outlines the experiences and challenges of the expanded dataset. A key
-challenge in explainability is resolving ambiguous and mislabeled samples in the
-expanded dataset.  Label issues in the EMNIST dataset are identified the
-explainable pipeline is leveraged in an attempt to resolve the issues.
+This work utilizes EMNIST and outlines the experiences and challenges of the
+expanded character dataset.  A key challenge in explainability is resolving
+ambiguous and mislabeled samples in the expanded dataset.  Some label issues in
+the EMNIST dataset are identified.  The identified samples with label issues are
+input to the explainable pipeline in an attempt to resolve the issues with an
+explanation.
 
 \section{Related Work}
 
@@ -123,11 +124,12 @@ explainable pipeline is leveraged in an attempt to resolve the issues.
 
 Since the presentation of the McCulloch-Pitts neuron
 model\cite{McCulloch1943-MCCALC-5} in 1943 and the subsequent implementation of
-the perceptron\cite{rosenblatt1957perceptron}, neural network models, tools, and
-hardware has improved drastically, e.g., backpropagation\cite{6795724},
-Convolutional Neural Networks (CNN)\cite{fukushima1982neocognitron}, gradient
-based learning\cite{726791}, deep residual learning\cite{7780459}.  In this work
-CNNs and Resnet are utilized and compared.
+the perceptron\cite{rosenblatt1957perceptron}, the hardware, neural network
+models, and tools have improved drastically, e.g.,
+backpropagation\cite{6795724}, Convolutional Neural Networks
+(CNN)\cite{fukushima1982neocognitron}, gradient based learning\cite{726791},
+deep residual learning\cite{7780459}.  In this work CNNs and Resnet are utilized
+and results are compared.
 
 \subsection{Explainable Artificial Intelligence}
 
@@ -141,15 +143,15 @@ application-grounded, human-grounded and functionally grounded
 \cite{Arrieta2020ExplainableAI,Survey18,Fuzzy19,Hagras18,GP18}.
 
 
-There has been some work done in a systematic review of XAI
-\cite{vilone2020explainable}.  The XAI methodology from \cite{whitten21} took a
-knowledge-based approach to construct a classification system with intrinsic
-explainability.  The method involves manually discovering multiple properties
-across classes of input that contribute to explainability.  Transforms related
-to properties were identified and applied to alter inputs.  Granular property
-based inferencing is used to support a global decision.  Output from the
-property-based methodology is a textual justification for the decision
-based upon the explainable properties.
+There has been work done by Vilone and Longo \cite{vilone2020explainable} to
+further characterize XAI techniques.  The XAI methodology from \cite{whitten21}
+takes a knowledge-based approach to construct a classification system with
+intrinsic explainability.  The method involves manually discovering multiple
+properties across classes of input that contribute to explainability.
+Transforms related to properties were identified and applied to alter inputs.
+Granular property based inferences are used to support a global decision.
+Output from the property-based methodology is a textual justification for the
+decision based upon the explainable properties.
 
 \subsection{EMNIST}
 
@@ -338,9 +340,9 @@ strong desire to address some of the issues.
 
 \subsection{Pruning Training Sets}
 
-Data sets that have noise such as problems with labels and ambiguous samples are
-problematic to effective ML training and explainability. Automatic pruning using
-weak learners to prune noisy data sets and obtained good results in
+Data sets that have noise, such as problems with labels and ambiguous samples,
+are problematic to effective ML training and explainability. Automatic pruning
+using weak learners to prune noisy data sets and obtained good results in
 \cite{angelova05}.  The excellent work on Confident Learning\cite{northcutt2021}
 produced an open source framework, Cleanlab, to identify label issues in
 datasets.  This research utilizes Cleanlab in some of the pruning techniques.
@@ -356,13 +358,13 @@ samples for classification as input and outputs a set of prediction, confidence
 pairs as well as rationale for the classification decisions.
 
 The system constructed is a data pipeline, as depicted in
-Fig.~\ref{fig:xai_data_pipeline}.  Input is acted on in the first stage of the
+Fig.~\ref{fig:xai_data_pipeline}.  Input is acted upon in the first stage of the
 pipeline to transform it into multiple samples based upon explainable
 properties.  The next step of the pipeline performs property inferencing, where
-classification decisions are made based on each property. The third stage
-considers the results of property inferencing to make a global decision in the
-voting phase. Finally, the explainability stage utilizes the properties that
-contributed to the decision to build explainable rationale.
+decisions are made based on each property. The third stage considers the results
+of the multiple property inferences to make a global decision in the voting
+phase. Finally, the explainability stage utilizes the properties that
+contributed to the decision to provide explainable rationale.
 
 \begin{figure}
     %\centering
@@ -378,30 +380,28 @@ the set, respectively.  The sample, $x_j$, from the MNIST and EMNIST datasets
 are simply a 28x28 input image and the label, $y_j$, an unsigned 8 bit integer,
 representing the class of the corresponding sample. 
 
-The first step of constructing the system is to discover explainable properties.
+The first step of constructing the pipeline is to discover explainable properties.
 Samples from the training set are reviewed manually to identify explainable
 properties. Explainable properties are characteristics of particular classes of
 input samples.
 
 An example of an explainable property comes from an observation that uppercase
-characters such as A, E, F, H, I and L often contain line properties. Lines are
-an explainable geometric property of some characters. Another explainable
-property comes from observing circles or semicircles in letters like O, Q, B, P,
-D. Circles and semicircles are, therefore, explainable properties of some
-characters. A third property is called stroke.  The stroke represents the
-undirected path traced by the writing implement and does not consider the width
-which could vary between characters based on the writer, tip of the implement,
-or pressure.
+characters such as A, E, F, H, I and L often contain lines. Lines are an
+explainable geometric property of multiple character classes. Another
+explainable property comes from observing circles or semicircles in letters like
+O, Q, B, P, D. A third property is called stroke.  The stroke represents the
+undirected path traced by the writing implement when writing the character.  The
+width can vary between characters based on the writer, tip of the implement, or
+pressure.
 
 From the list of explainable properties, property transforms are identified.  A
 property transform is a modification of the input to highlight an explainable
 property.  Transform modules implement the conversion of the input to exemplify
-traces of the property in the input.
+incidence of the property in the input.
 
-Since line and circle explainable properties were identified in many classes of
-characters, it may be beneficial to find a transform that highlights lines and
-circles in images.  There is such a transform, the Hough
-transform\cite{Hough1959qva}.  A modules are composed to perform a hough
+In the case of the line and circle explainable properties, a transform that
+highlights lines and circles in images is the Hough
+transform\cite{Hough1959qva}.  Modules are composed to perform a hough
 transforms for linear and circle or ellipse features.  The stroke of a character
 can be highlighted by taking the morphological skeleton\cite{LEE1994} of the
 input image.
@@ -413,12 +413,12 @@ training set.  A NN is trained on and receives input from one property
 transformation.  Each resulting trained NN will make fine-grained inferences
 based on its explainable property.
 
-Upon completing the training of the NNs, the Knowledgebase (KB) may be
-constructed. This is done by processing the transformed training data by the
-NNs and storing the results in the KB along with training labels.  The data in
-KB is then used to gauge the effectiveness, $E$, of each property transform and
-NN for a particular class.  The effectiveness metrics are stored in the
-Knowledgbase and are used to assist in the voting mechanism.
+Upon completing the training of the NNs, the Knowledgebase (KB) is constructed.
+This is done by processing the transformed training data by the trained NNs and
+storing the results in the KB along with training labels.  The data in KB is
+then used to gauge the effectiveness of each property transform and NN for a
+particular class.  The effectiveness metrics are stored in the Knowledgbase and
+are later used to assist in the voting mechanism.
 
 A probabilistic voting scheme is constructed as a module to combine the granular
 classification results and utilize the effectiveness metrics to make a set of
@@ -451,11 +451,11 @@ Properties and corresponding property transforms that were utilized consist of:
     \item The area property and the convex hull transform
 \end{itemize}
 
-A new property added to this methodology is the area property, representing the general
-region of the image that a character consumes. The corresponding
+A new property added to this methodology is the area property, representing the
+general region of the image that a character consumes. The corresponding
 property transform is the convex hull. Fig.~\ref{fig:zero_raw} represents an
-original zero sample and Fig.~\ref{fig:zero_ch} represents the convex hull
-transform of the original zero.
+original zero sample character and Fig.~\ref{fig:zero_ch} represents the convex
+hull transform of the original zero.
 
 \begin{figure}[h]
     \centering
@@ -489,13 +489,14 @@ unexplainable recognition.  The results are outlined in Table
 After applying the XAI pipeline to the balanced EMNIST dataset, a significant
 degradation in accuracy was observed in comparison to the unexplainable results.
 After considering opportunities for improving performance, the option of further
-splitting the EMNIST dataset by classes was used.  Balanced EMNIST was
-split into a dataset consisting of only digits, only uppercase digits (26
-classes), and only lowercase letters.  The argument that when letters are
-observed in context, among other handwritten letters, it may be apparent from
-which split the letter belongs.  After splitting the balanced dataset,
-additional unexplainable and explainable baselines were obtained for later
-comparison in Sec. \ref{emnist_results}.
+splitting the EMNIST dataset by classes was used.  Balanced EMNIST was split
+into a dataset consisting of only digits, only uppercase digits (26 classes),
+and only lowercase letters.  Justification for such splitting involves
+considering works that show there is improvement with recognition when context
+of characters of a writing are considered \cite{506792}.  Based upon context, it
+may be apparent from which split a letter belongs. After splitting the balanced
+dataset, additional unexplainable and explainable baselines were obtained for
+later comparison in Sec. \ref{emnist_results}.
 
 \subsection{Explainability Metric for Unexplainable Components}
 
@@ -513,8 +514,8 @@ while unexplainable would have $x_i = 0$.  The explainable components would be
 summed for each class $d$ the NNs vote for to give explainability $X_d$ in
 Eq.~\ref{eq:explainability} where $x_{i,d}$ represents the explainable component
 from NNs that vote for class $d$ and $V_d$ is the set of NNs that vote for class
-$d$.  In such a system, the output of the system would consist of the set of
-class, confidence, explainability trips for each potential solution.  Note that
+$d$.  In such a system, the output of would consist of the set of class,
+confidence, explainability triples for each potential solution.  Note that
 explainability would be $1.0 \geq X_d \geq 0$, with $X_d = 1.0$ signifying that
 only explainable NNs voted for $d$ while values $X_d < 1.0$ would signify that a
 vote was contributed by an unexplainable NN for class $d$.
@@ -527,7 +528,7 @@ vote was contributed by an unexplainable NN for class $d$.
 
 \subsection{Removing Ambiguous Data}
 
-In an attempt improve explainable results the removal of ambiguous and
+In an attempt improve explainable results, the removal of ambiguous and
 mislabeled data was explored. Data and pruning of the training and test sets
 were performed in several ways and compared.
 
@@ -543,6 +544,7 @@ likely due to unbalancing the training set.
 
 \begin{table}
     \centering
+    \caption{The number of pruned samples based on a 75\% confidence threshold}
     %\resizebox{\textwidth}{!}{%
     \begin{tabular}{|c|c|}
         \hline
@@ -560,7 +562,7 @@ likely due to unbalancing the training set.
         \hline
     \end{tabular}
     %}
-    \caption{\label{tab_threshold_pruning_qty}The number of pruned samples based on a 75\% confidence threshold}
+    \label{tab_threshold_pruning_qty}
 \end{table}
 
 The second pruning scheme limited the pruning to only the worst 5\% confidence
@@ -597,12 +599,15 @@ average explainability metric, $X_d$, was reduced to 79\%.
 Table~\ref{tab_unexplainable accuracy_results} shows the accuracy results using
 only the indicated NN on the various EMNIST datasets.  Note that the accuracy
 results are only using the base images without transformation and a single NN.
-The two layer CNN can be observed as having the top results.  This maybe due to
-image resizing that was necessary as the Resnet implementation utilized requires
-a minimum input of 32x32.  
+On the full balanced dataset, with 46 classes, Resent50 and the CNN performed
+comparably. The two layer CNN can be observed as having maximum accuracy results
+in all cases except lowercase characters.  The reason for lower Resnet results
+may be due to resizing the input images since the Resnet implementation that was
+utilized requires a minimum input of 32x32.  
 
 \begin{table}
     \centering
+    \caption{Unexplainable accuracy results on various balanced EMNIST data sets with differing NN models}
     \resizebox{\columnwidth}{!}{%
     \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
         \cline{2-9}
@@ -621,22 +626,21 @@ a minimum input of 32x32.
         \hline
     \end{tabular}
     }
-    \caption{\label{tab_unexplainable accuracy_results}Unexplainable accuracy results on various balanced EMNIST data sets with differing NN models}
+    \label{tab_unexplainable accuracy_results}
 \end{table}
 
 Table \ref{tab_explainable accuracy_results} shows the explainable accuracy
 results on the unpruned data. Compared to Table \ref{tab_unexplainable
 accuracy_results} the results are lower.  As expected, there appears to be a
-cost in decreased accuracy for explainability as implemented in this
-methodology. %TODO: add more details here.
+cost in decreased accuracy for explainability. %TODO: add more details here.
 
-The Resnet50 models appeared to perform better with the uppercase letters.  The
-uppercase letter dataset had 2.5 times the number of classes as the other data
-sets, 26 classes versus 10.  It should be noted that on the full balanced
-dataset with 46 classes Resent50 and the CNN performed nearly identically. 
+In the explainable results, Tab.~\ref{tab_explainable accuracy_results}, the
+Resnet50 models appeared to perform better with the full EMNIST dataset and
+uppercase characters.ß
 
 \begin{table}
     \centering
+    \caption{Explainable accuracy results on various balanced EMNIST data sets with differing NN models}
     \resizebox{\columnwidth}{!}{%
     \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
         \cline{2-9}
@@ -655,7 +659,7 @@ dataset with 46 classes Resent50 and the CNN performed nearly identically.
         \hline
     \end{tabular}
     }
-    \caption{\label{tab_explainable accuracy_results}Explainable accuracy results on various balanced EMNIST data sets with differing NN models}
+    \label{tab_explainable accuracy_results}
 \end{table}
 
 Table~\ref{raw_cap_confusion_matrix} shows the confusion matrix for interesting
@@ -672,6 +676,7 @@ with the U and V classes.
 
 \begin{table}
     \centering
+    \caption{Explainable confusion matrix for unpruned uppercase letters H - M, U, and V}
     %\resizebox{\columnwidth}{!}{%
     \begin{tabular}{ |c|c|c|c|c|c|c|c|c|}
     \hline
@@ -694,8 +699,8 @@ with the U and V classes.
     V & & & 2 & & 2 & 2 & 9 & 326 \\
     \hline
     \end{tabular}
-    %} 
-    \caption{\label{raw_cap_confusion_matrix}Explainable confusion matrix for unpruned uppercase letters H - M, U, and V}
+    %}
+    \label{raw_cap_confusion_matrix}
 \end{table}
 
 After applying one round of Cleanlab to prune only training labels with issues,
@@ -708,6 +713,7 @@ decrease in accuracy to 87.4\% on uppercase letters from 88.7\% without pruning.
 
 \begin{table}
     \centering
+    \caption{Explainable confusion matrix for uppercase letters H - M, U, and V after a single cleanlab pruning}
     %\resizebox{\columnwidth}{!}{%
     \begin{tabular}{ |c|c|c|c|c|c|c|c|c|}
     \hline
@@ -731,8 +737,7 @@ decrease in accuracy to 87.4\% on uppercase letters from 88.7\% without pruning.
     \hline
     \end{tabular}
     %}
-    \caption{\label{raw_cap_cleanlab_confusion_matrix}Explainable confusion matrix for
-    uppercase letters H - M, U, and V after a single cleanlab pruning}
+    \label{raw_cap_cleanlab_confusion_matrix}
 \end{table}
 
 After applying subsequent rounds of Cleanlab to the capital letter dataset, the
@@ -742,6 +747,7 @@ for the classes of interest after the third Cleanlab pruning.
 
 \begin{table}
     \centering
+    \caption{Explainable confusion matrix for uppercase letters H - M, U, and V after three rounds of Cleanlab pruning}
     %\resizebox{\columnwidth}{!}{%
     \begin{tabular}{ |c|c|c|c|c|c|c|c|c|}
     \hline
@@ -765,8 +771,7 @@ for the classes of interest after the third Cleanlab pruning.
     \hline
     \end{tabular}
     %}
-    \caption{\label{raw_cap_cleanlab_third_confusion_matrix}Explainable confusion matrix for
-    uppercase letters H - M, U, and V after three rounds of Cleanlab pruning}
+    \label{raw_cap_cleanlab_third_confusion_matrix}
 \end{table}
 
 
@@ -784,7 +789,7 @@ effectiveness weights for the classes, Q wins with a confidence of 71\%.
 
 \begin{figure}
     \centering
-    \includegraphics[width=3cm]{./images/examples/test-Q-0.png}
+    \includegraphics[width=2cm]{./images/examples/test-Q-0.png}
     \caption{Example 1: a test sample labeled Q}
     \label{fig:ex1}
 \end{figure}
@@ -861,7 +866,7 @@ circle property via the ellipse transform.
 
 \begin{figure}
     \centering
-    \includegraphics[width=3cm]{./images/examples/test-C-1.png}
+    \includegraphics[width=2cm]{./images/examples/test-C-1.png}
     \caption{Example 2: A test sample labeled C}
     \label{fig:ex2}
 \end{figure}
