2023-02-21 pcw review feedback

--- a/references.bib
+++ b/references.bib
@@ -267,3 +267,11 @@ author = {T.C. Lee and R.L. Kashyap and C.N. Chu},
   number={7},
   pages={690-706},
   doi={10.1109/34.506792}}
+
+@inproceedings{selvaraju2017grad,
+  title={Grad-cam: Visual explanations from deep networks via gradient-based localization},
+  author={Selvaraju, Ramprasaath R and Cogswell, Michael and Das, Abhishek and Vedantam, Ramakrishna and Parikh, Devi and Batra, Dhruv},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={618--626},
+  year={2017}
+}
