final abstract revisions

--- a/xai-manuscript.tex
+++ b/xai-manuscript.tex
@@ -21,7 +21,7 @@
 \textit{Case School of Engineering} \\
 \textit{Case Western Reserve University}\\
 Cleveland, OH, USA \\
-pcw@case.edu, fxw12@case.edu, cap2.case.edu}
+pcw@case.edu, fxw12@case.edu, cap2@case.edu}
 %\and
 %\IEEEauthorblockN{Author 2}
 %\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
@@ -85,24 +85,37 @@ pcw@case.edu, fxw12@case.edu, cap2.case.edu}
     % explainable pipeline in an attempt resolve issues and relabel them.  Results
     % and explainable rationale from some pruned training set data is presented.
 
-    The prevalence of Artificial Intelligence (AI), especially Machine Learning
-    (ML), in many aspects of life has brought about an increasing desire for
-    explainability. Work has been posed to interpret the weights of Neural
-    Networks and provide visual hints of explainability. This work introduces a
-    partitioning approach, constructing an explainable architecture that
-    recognizes handwritten characters. Decisions are partitioned among
-    explainable properties and associated neural networks to pose local
-    solutions. Local solutions contribute to a global decision and explainable
-    rationale for the decision. The accuracy of the architecture is improved by
-    mixing explainable and unexplainable solutions and a metric is introduced
-    that assists in characterizing explainability using mixed solutions.
-    Scalability of the explainable architecture is explored with a dataset
-    containing nearly five times the classes of prior work. Ambiguous and
-    mislabeled samples in training data prove challenging. Techniques are
-    applied to identify and prune the training set in order to improve
-    explainability. Pruned samples from the training set are presented to the
-    architecture in an attempt to resolve issues. Results and explainable
-    rationale from pruned data is presented.
+    % The prevalence of Artificial Intelligence (AI), especially Machine Learning
+    % (ML), in many aspects of life has brought about an increasing desire for
+    % explainability. Work has been posed to interpret the weights of Neural
+    % Networks and provide visual hints of explainability. This work introduces a
+    % partitioning approach, constructing an explainable architecture that
+    % recognizes handwritten characters. Decisions are partitioned among
+    % explainable properties and associated neural networks to pose local
+    % solutions. Local solutions contribute to a global decision and explainable
+    % rationale for the decision. The accuracy of the architecture is improved by
+    % mixing explainable and unexplainable solutions and a metric is introduced
+    % that assists in characterizing explainability using mixed solutions.
+    % Scalability of the explainable architecture is explored with a dataset
+    % containing nearly five times the classes of prior work. Ambiguous and
+    % mislabeled samples in training data prove challenging. Techniques are
+    % applied to identify and prune the training set in order to improve
+    % explainability. Pruned samples from the training set are presented to the
+    % architecture in an attempt to resolve issues. Results and explainable
+    % rationale from pruned data is presented.
+
+    The prevalence of Artificial Intelligence (AI), in many aspects of life has
+    brought about an increasing need for explainability of AI solutions.
+    Previous work has been posed to interpret the weights of Neural Networks and
+    provide visual hints of explainability. This work introduces a partitioning
+    approach, constructing an explainable architecture that recognizes
+    handwritten characters. The accuracy of the architecture is improved by
+    introducing unexplainable components and a metric to characterize
+    explainability. Ambiguous and mislabeled samples in training data prove
+    challenging. Techniques are applied to identify issues and prune the
+    training set to improve explainability. Pruned samples from the
+    training set are presented to the architecture in an attempt to resolve
+    issues. Results and explainable rationale from pruned data is presented.
 
 \end{abstract}
 
